WebCore/platform/network/mac/ResourceResponseMac.mm
@@ -27,6 +27,7 @@
 #import "config.h"
 #import "ResourceResponse.h"
 
+#import "WebCoreURLResponse.h"
 #import <Foundation/Foundation.h>
 #import <limits>
 
@@ -64,7 +65,7 @@ void ResourceResponse::doUpdateResourceResponse()
     }
     
     m_url = [m_nsResponse.get() URL];
-    m_mimeType = [m_nsResponse.get() MIMEType];
+    m_mimeType = [m_nsResponse.get() _webcore_MIMEType];
     m_expectedContentLength = [m_nsResponse.get() expectedContentLength];
     m_textEncodingName = [m_nsResponse.get() textEncodingName];
     m_suggestedFilename = [m_nsResponse.get() suggestedFilename];
@@ -87,15 +88,6 @@ void ResourceResponse::doUpdateResourceResponse()
         NSEnumerator *e = [headers keyEnumerator];
         while (NSString *name = [e nextObject])
             m_httpHeaderFields.set(name, [headers objectForKey:name]);
-#ifndef BUILDING_ON_TIGER
-        // FIXME: This is part of a workaround for <rdar://problem/5321972> REGRESSION: Plain text document from HTTP server detected
-        // as application/octet-stream
-        if (m_mimeType == "application/octet-stream") {
-            static const String textPlainMIMEType("text/plain");
-            if (m_httpHeaderFields.get("Content-Type").startsWith(textPlainMIMEType))
-                m_mimeType = textPlainMIMEType;
-        }
-#endif
     } else {
         m_httpStatusCode = 0;
 
